--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -29,3 +29,13 @@
 .nav-item:hover {
   background-color: #0056b3;
 }
+.cart-badge {
+  background-color: navy;
+  color: white;
+  font-size: 0.75em;
+  padding: 2px 6px;
+  border-radius: 50%;
+  position: relative;
+  top: -1.5px;
+  right: -7px;
+}
