--- a/frontend/src/components/cartItem/CartItem.css
+++ b/frontend/src/components/cartItem/CartItem.css
@@ -1,17 +1,28 @@
 .cart-item {
-    display: flex;
-    align-items: center;
-    margin-bottom: 20px;
-  }
-  
-  .cart-item-image {
-    width: 100px;
-    height: 100px;
-    object-fit: cover;
-    margin-right: 20px;
-  }
-  
-  .cart-item-details h4,
-  .cart-item-details p {
-    margin: 0;
-  }
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.cart-item-image {
+  width: 100px;
+  height: 100px;
+  object-fit: cover;
+  margin-right: 20px;
+}
+
+.cart-item-details h4,
+.cart-item-details p {
+  margin: 0;
+}
+
+.items-detail {
+  display: flex;
+  gap: 10px;
+}
+
+.quantity-counter {
+  margin-top: 10px;
+  display: flex;
+  gap: 5px;
+}
