--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -39,3 +39,16 @@
   top: -1.5px;
   right: -7px;
 }
+
+/* Media query for phone screens */
+@media (max-width: 600px) {
+  .navbar {
+    flex-direction: column;
+    align-items: center;
+  }
+  .nav-item {
+    margin-top: 10px;
+    display: flex;
+    flex-direction: row;
+  }
+}
