--- a/frontend/src/components/checkoutDetails/CheckoutDetails.css
+++ b/frontend/src/components/checkoutDetails/CheckoutDetails.css
@@ -1,30 +1,13 @@
-.cart-page {
+.checkout-details {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  padding: 20px;
-}
-
-.cart-items {
-  width: 100%;
-  max-width: 800px; /* Adjust based on your layout */
+  justify-content: space-between;
   margin-bottom: 20px;
+  width: 15vw;
 }
 
-@media (min-width: 768px) {
-  .cart-page {
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: flex-start;
-  }
-
-  .cart-items,
+@media (max-width: 600px) {
   .checkout-details {
-    flex: 1;
-  }
-
-  .checkout-details {
-    margin-left: 20px;
-    max-width: 300px; /* Keeps the checkout details from stretching too wide */
+    width: 100%;
   }
 }
