--- a/frontend/src/components/checkoutDetails/CheckoutDetails.css
+++ b/frontend/src/components/checkoutDetails/CheckoutDetails.css
@@ -4,6 +4,7 @@
   justify-content: space-between;
   margin-bottom: 20px;
   width: 15vw;
+  height: 20vh;
 }
 
 .checkout-details button:disabled {
